--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+spring.jpa.defer-datasource.initialization = true
+spring.jpa.show-sql = true
+
 spring.datasource.url = jdbc:mysql://localhost:3306/messages-database
 spring.datasource.username = messages
 spring.datasource.password = artistservice
+
+spring.jpa.hibernate.ddl-auto= update
+spring.sql.init.mode=always
